--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ main {
     padding: 0;
 }
 
+/* Navbar */
+
 .nav-container {
     display: flex;
     justify-content: space-between;
@@ -48,6 +50,8 @@ nav>a:hover {
     color: #FF7F3E;
     transition: all 0.6s ease-in;
 }
+
+/* Home Header */
 
 .header-container {
     display: flex;
@@ -95,7 +99,7 @@ nav>a:hover {
     }
 }
 
-
+/* Our Profile */
 .our-profile h1 {
     font-size: 2em;
     text-align: center;
@@ -222,6 +226,8 @@ figure .portfolio-content button:hover {
         color: #fff;
     }
 }
+
+/* Message Us */
 
 .message-container {
     margin-left: 10px;
